@@ -28,7 +28,7 @@ Si es beta, actualizar solo el archivo de snapshot
 nombres ediciones:
 Exploding fist, Bubble bobble, Star raiders 2, Sabre wulf, Target renegade, Night Shift, Saint Dragon, Dynamite Dan 2,
 Silent service, Frank n stein, Match day, Bruce lee, Zorro, Three weeks in Paradise, 
-Exolon, Koronis Rift, Fox Fights back, Gauntlet, Pheenix, Death Wish 3, Rygar, Abadia del Crimen
+Exolon, Koronis Rift, Fox Fights back, Gauntlet, Pheenix, Death Wish 3, Rygar, Abadia del Crimen (y quizá la abadia de cpc?)
 
 
 *hysteria, *rainbow islands, *jetpac, *hard drivin', *lemmings, *sir fred, *rick, *agent dan, *id, *rainbow, *rainbow+, *saint george, 
